--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -12,25 +12,28 @@ header {
     align-items: center;
     display: flex;
     height: 100%;
-    justify-content: space-around;
-
+    max-width: 1140px;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 40%;
     list-style: none;
 }
 
 .menu_item a {
     font-size: 18px;
+    font-weight: 600;
     text-decoration: none;
     color: white;
+    transition: all 500ms ease;
 }
 
 .menu_item a:hover {
-    color: black;
+    color: yellow;
 }
 
 .logo {
