--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,6 +1,6 @@
 .container-slider {
-  max-width: 1400px;
-  height: 800px;
+  max-width: 1140px;
+  height: 600px;
   margin: 100px auto 0;
   position: relative;
   overflow: hidden;
@@ -18,13 +18,31 @@
   opacity: 0;
   transition: opacity ease-in-out 0.4s;
 }
+
 .slide img {
   width: 100%;
   height: 100%;
+  opacity: 0.8;
   object-fit: cover;
 }
+
+
 .active-anim {
   opacity: 1;
+}
+
+.banner_text {
+  position: relative;
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  color: red;
+  font-size: 36px;
+  font-weight: 700;
+  bottom: 200px;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .btn-slide {
