--- a/src/components/ScrollTop/scrollTop.css
+++ b/src/components/ScrollTop/scrollTop.css
@@ -2,12 +2,12 @@
     position: fixed;
     bottom: 10px;
     right: 10px;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid red;
+    border: 2px solid #050066;
     border-radius: 50%;
     transition: all 500ms ease;
 }
@@ -17,7 +17,8 @@
 }
 
 .arrow_img {
-    width: 30px;
-    height: 30px;
-    fill: red;
+    width: 35px;
+    height: 35px;
+    stroke: #050066;
+    fill: #050066;
 }
