--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -22,7 +22,6 @@
 .slide img {
   width: 100%;
   height: 100%;
-  opacity: 0.8;
   object-fit: cover;
 }
 
@@ -32,11 +31,13 @@
 }
 
 .banner_text {
+  padding: 10px;
   position: relative;
-  border: 2px solid red;
+  background-color: green;
+  opacity: 0.9;
   display: flex;
   flex-direction: column;
-  color: red;
+  color: white;
   font-size: 36px;
   font-weight: 700;
   bottom: 200px;
@@ -90,6 +91,31 @@
   margin: 0 5px;
   background: #f1f1f1;
 }
+
 .dot.active {
   background: rgb(32, 32, 32);
+}
+
+.slider_button {
+  position: absolute;
+  width: 500px;
+  font-family: 'Roboto' sans-serif;
+  height: 100px;
+  font-weight: 600;
+  border-radius: 25px;
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  color: #f1f1f1;
+  background-color: #0a5bf2;
+  bottom: 450px;
+  right: 60px;
+  z-index: 30;
+  cursor: pointer;
+}
+
+.slider_button:hover {
+  cursor: pointer;
 }
